<resources>
    <!-- Text to display in the app bar [CHAR LIMIT=NONE] -->
    <string name="app_name">Free eBooks Finder App</string>

    <!-- Text to display as a hint in the edittext field [CHAR LIMIT=NONE] -->
    <string name="activity_ebook_edittext_hint_ebook_name">eBook Name</string>

    <!-- Text to display in search button [CHAR LIMIT=NONE] -->
    <string name="activity_ebook_button_find">Find</string>

    <!-- Text to display as the header title of main activity [CHAR LIMIT=NONE] -->
    <string name="activity_ebook_header">Top 10 <b><i>Free</i></b> eBooks</string>

    <!-- Categories label to display in the list item view [CHAR LIMIT=NONE] -->
    <string name="list_item_ebook_label_categories"><strong>Categories:</strong></string>

    <!-- Authors label to display in the list item view [CHAR LIMIT=NONE] -->
    <string name="list_item_ebook_label_authors"><strong>Authors:</strong></string>

    <!-- Publish date label to display in the list item view [CHAR LIMIT=NONE] -->
    <string name="list_item_ebook_label_published_date"><strong>Published Date:</strong></string>

    <!-- Number of pages label to display in the list item view [CHAR LIMIT=NONE] -->
    <string name="list_item_ebook_label_page_count"><strong>Page Count:</strong></string>

    <!-- eBook preview label to display in the list item view [CHAR LIMIT=NONE] -->
    <string name="list_item_ebook_label_preview"><strong>Preview:</strong></string>

    <!-- Google Books label to display in the list item view [CHAR LIMIT=NONE] -->
    <string name="list_item_ebook_label_google_play"><strong>Google Play:</strong></string>

    <!-- PDF label to display in the list item view [CHAR LIMIT=NONE] -->
    <string name="list_item_ebook_label_pdf"><strong>PDF:</strong></string>

    <!-- Language label to display in the list item view [CHAR LIMIT=NONE] -->
    <string name="list_item_ebook_label_language"><strong>Language:</strong></string>

    <!-- Text to display in the list item view when a value is empty or null. N/A stands for Not Available [CHAR LIMIT=NONE] -->
    <string name="list_item_ebook_value_not_available">N/A</string>

    <!-- Text to display in the list item view when a URL value is available. This text is displayed as a hyperlink [CHAR LIMIT=NONE] -->
    <string name="list_item_ebook_value_available"><u>Available</u></string>

    <!-- Text to display in the list item view when internet lost connection after the app initally had access to the internet successfully [CHAR LIMIT=NONE] -->
    <string name="empty_state_no_internet">No internet connection.</string>

    <!-- Text to display in the list item view when internet is not connected the very first time user opens the app [CHAR LIMIT=NONE] -->
    <string name="empty_state_no_internet_first_time">No internet connection. Whenever you expect internet is back, please exit the app and relaunch it again because this version of the app doesn\'t monitor internet connectivity during the app execution. We apologize for the inconvenience.</string>

    <!-- Text to display in the list item view on app first load [CHAR LIMIT=NONE] -->
    <string name="empty_state_welcome">Type in your search keyword in the above textbox and press Find to list top 10 best matching books.</string>

    <!-- Text to display in the list item view on app first load [CHAR LIMIT=NONE] -->
    <string name="empty_state_no_ebooks">No matching ebooks found. Please try again</string>

    <!-- Clear empty state message [CHAR LIMIT=NONE] -->
    <string name="empty_state_null"></string>
</resources>
