<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EbookActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_ebook_header"
        android:gravity="center_horizontal"
        android:padding="16dp"
        android:textSize="36sp"
        android:background="@color/colorHeaderBackground"
        android:textColor="@color/colorPrimaryDark"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="16dp"
        android:gravity="center_horizontal"
        android:background="@color/colorContentBackground">

        <EditText
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/activity_ebook_edittext_hint_ebook_name"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/findButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_ebook_button_find"
            android:layout_marginLeft="8dp"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ListView
            android:paddingTop="8dp"
            android:id="@+id/ebooksListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorContentBackground" />

        <ProgressBar
            android:id="@+id/indeterminateBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

        <TextView
            android:id="@+id/emptyStateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:textAppearanceMedium"
            android:layout_centerInParent="true"
            android:padding="24dp"
            android:gravity="center"/>
    </RelativeLayout>



</LinearLayout>